# Crocrodile-Trainer

./: .gitmodules  pyproject.toml
static/: package-lock.json  package.json
