[tool.poetry]
name = "crocrodile-trainer"
version = "0.1.0"
description = "A training GUI for Crocrodile."
authors = ["Virinas-code <alexcode228@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
